[tool.poetry]
name = "photos-automation"
version = "0.1.0"
description = ""
authors = ["John Sturgeon <john.sturgeon@me.com>"]
readme = "README.md"
packages = [{include = "photos_automation"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
osxphotos = "^0.55.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
